--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
         </footer>
         <!-- Scroll to Top Button-->
         <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
+        <!-- SVG for text animation -->
         <svg id="filters">
             <defs>
                 <filter id="threshold">
