--- a/index.html
+++ b/index.html
@@ -60,11 +60,14 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>One line summary of what you say below</h2>
+                        <h2>Core Competencies for Bridging the Global Achievement Gap</h2>
                         <p class="lead mb-5">
-                            We are living in interesting times, with artificial intelligence tools redefining many jobs, and robots taking over mundane tasks. In such times how do we ensure we are ready to embrace these changes? How do we prepare them to handle these and even more disruptive innovations in the years ahead? 
+                            We are living in interesting times, with artificial intelligence tools redefining many jobs, and robots taking over mundane tasks. In such times how do we ensure we are ready to embrace these changes? How do we prepare them to handle these and even more disruptive innovations in the years ahead?
                         </p>
-                        <a class="btn btn-dark btn-xl" href="#services">Our Workshops</a>
+                        <p class="lead mb-5">
+                            Our mission is to equip students and professionals alike with the essential skills and knowledge necessary to thrive in today's dynamic world. We understand the importance of core competencies in shaping the foundation for success. Our team of experienced educators and industry professionals have carefully designed a range of training programs that cater to the unique needs of schools and corporations. We take pride in fostering an environment of growth, collaboration, and excellence.
+                        </p>
+                        <a class="btn btn-dark btn-xl" href="#modules">Our Workshops</a>
                     </div>
                 </div>
             </div>
@@ -80,26 +83,25 @@
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
                         <h4><strong>Academic Augmentation</strong></h4>
-                        <p class="text-faded mb-0">Looks great on any screen size!</p>
+                        <p class="text-faded mb-0">Expands learning potential with integrated advanced tools and resources.</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
                         <h4><strong>Workshops</strong></h4>
-                        <p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
+                        <p class="text-faded mb-0">Empowering individuals with essential skills</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
                         <h4><strong>Trainings</strong></h4>
                         <p class="text-faded mb-0">
-                            Millions of users
+                            An intensive and well-structured training program for understanding key concepts, practical skills, and real-world applications.
                             <i class="fas fa-heart"></i>
-                            Start Bootstrap!
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
                         <h4><strong>Corporate</strong></h4>
-                        <p class="text-faded mb-0">I mustache you a question...</p>
+                        <p class="text-faded mb-0">Elevate your potential with our tailored corporate training on essential core competencies for sustained success</p>
                     </div>
                 </div>
             </div>
@@ -110,9 +112,9 @@
                 <h2 class="mx-auto mb-5">
                     Welcome to
                     <em>your</em>
-                    next website!
+                    digital learning assistant!
                 </h2>
-                <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/theme/stylish-portfolio/">Download Now!</a>
+                <a class="btn btn-primary btn-xl" href="#">Coming Soon!</a>
             </div>
         </section>
         <!-- Portfolio-->
@@ -127,8 +129,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Stationary</div>
-                                    <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                                    <div class="h2">Problem Solving</div>
+                                    <p class="mb-0">Unlock your potential with our training program – where challenges become opportunities and solutions are just a click away.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
@@ -138,8 +140,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Ice Cream</div>
-                                    <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                                    <div class="h2">Computational Thinking</div>
+                                    <p class="mb-0">Embark on a journey of logical discovery with our dynamic computational thinking training program.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
@@ -149,8 +151,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Strawberries</div>
-                                    <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                                    <div class="h2">Entrepreneurship</div>
+                                    <p class="mb-0">Step into a realm of possibilities with our training program, guiding you towards entrepreneurial excellence and accomplishment.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
@@ -160,8 +162,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Workspace</div>
-                                    <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                                    <div class="h2">Financial Literacy</div>
+                                    <p class="mb-0">Explore financial empowerment to gain essential insights and skills to navigate the intricate landscape of finances.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
@@ -173,9 +175,9 @@
         <!-- Call to Action-->
         <section class="content-section bg-primary text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-                <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
-                <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
+                <h2 class="mb-4">We are learning and growing. Want to engage with us...</h2>
+                <a class="btn btn-xl btn-light me-4" href="#!">Enquire!</a>
+                <a class="btn btn-xl btn-dark" href="#!">Join Us!</a>
             </div>
         </section>
         <!-- Map-->
@@ -192,13 +194,13 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-linkedin"></i></a>
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/company/a-bridge-ab/"><i class="icon-social-linkedin"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-instagram"></i></a>
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/abridge.ab/"><i class="icon-social-instagram"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-facebook"></i></a>
+                        <a class="social-link rounded-circle text-white" href="https://www.facebook.com/profile.php?id=61550598659570"><i class="icon-social-facebook"></i></a>
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; RHO Technology Solutions LLP 2023</p>
