Editing Programs and Masthead Title

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>Core Competencies for Bridging the Global Achievement Gap</h2>
+                        <h2>Bridging the Global Achievement Gap</h2>
                         <p class="lead mb-5">
                             We are living in interesting times, with artificial intelligence tools redefining many jobs, and robots taking over mundane tasks. In such times how do we ensure we are ready to embrace these changes? How do we prepare them to handle these and even more disruptive innovations in the years ahead?
                         </p>
@@ -81,27 +81,27 @@
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="graduation-cap"></i></span>
                         <h4><strong>Academic Augmentation</strong></h4>
-                        <p class="text-faded mb-0">Expands learning potential with integrated advanced tools and resources.</p>
+                        <p class="text-faded mb-0">Enriching learning experience for students</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
-                        <h4><strong>Workshops</strong></h4>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="puzzle-piece"></i></span>
+                        <h4><strong>Engaing Workshops</strong></h4>
                         <p class="text-faded mb-0">Empowering individuals with essential skills</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
-                        <h4><strong>Trainings</strong></h4>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="person-chalkboard"></i></span>
+                        <h4><strong>Skill Empowerment</strong></h4>
                         <p class="text-faded mb-0">
-                            An intensive and well-structured training program for understanding key concepts, practical skills, and real-world applications.
+                            Full-spectrum programs for core competency
                             <i class="fas fa-heart"></i>
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
-                        <h4><strong>Corporate</strong></h4>
-                        <p class="text-faded mb-0">Elevate your potential with our tailored corporate training on essential core competencies for sustained success</p>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="user-tie"></i></span>
+                        <h4><strong>Corporate Bootcamps</strong></h4>
+                        <p class="text-faded mb-0">Enhance employee innovation & potential</p>
                     </div>
                 </div>
             </div>
