Spelling and Icon corrrection. Other Content Changes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
         <meta name="theme-color" content="#ffffff">
         <meta name="msapplication-TileColor" content="#ff0000">
 
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Simple line icons-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -29,7 +27,7 @@
         <!-- Flying Butterflies-->
         <canvas class="p-canvas-webgl" id="canvas-webgl"></canvas>
         <!-- Navigation-->
-        <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
+        <a class="menu-toggle rounded" href="#"><i class="icon-menu"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="#page-top">A Bridge</a></li>
@@ -60,9 +58,9 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>Bridging the Global Achievement Gap</h2>
+                        <h2 class="mb-5">Bridging the Global Achievement Gap</h2>
                         <p class="lead mb-5">
-                            We are living in interesting times, with artificial intelligence tools redefining many jobs, and robots taking over mundane tasks. In such times how do we ensure we are ready to embrace these changes? How do we prepare them to handle these and even more disruptive innovations in the years ahead?
+                            We are living in interesting times, with artificial intelligence tools redefining many jobs, and robots taking over mundane tasks. In such times how do we ensure we are ready to embrace these changes? How do we prepare to handle these and even more disruptive innovations in the years ahead?
                         </p>
                         <p class="lead mb-5">
                             Our mission is to equip students and professionals alike with the essential skills and knowledge necessary to thrive in today's dynamic world. We understand the importance of core competencies in shaping the foundation for success. Our team of experienced educators and industry professionals have carefully designed a range of training programs that cater to the unique needs of schools and corporations. We take pride in fostering an environment of growth, collaboration, and excellence.
@@ -81,17 +79,17 @@
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="graduation-cap"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-graduation"></i></span>
                         <h4><strong>Academic Augmentation</strong></h4>
                         <p class="text-faded mb-0">Enriching learning experience for students</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="puzzle-piece"></i></span>
-                        <h4><strong>Engaing Workshops</strong></h4>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-puzzle"></i></span>
+                        <h4><strong>Engaging Workshops</strong></h4>
                         <p class="text-faded mb-0">Empowering individuals with essential skills</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="person-chalkboard"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-directions""></i></span>
                         <h4><strong>Skill Empowerment</strong></h4>
                         <p class="text-faded mb-0">
                             Full-spectrum programs for core competency
@@ -99,7 +97,7 @@
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="user-tie"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-rocket"></i></span>
                         <h4><strong>Corporate Bootcamps</strong></h4>
                         <p class="text-faded mb-0">Enhance employee innovation & potential</p>
                     </div>
@@ -112,7 +110,7 @@
                 <h2 class="mx-auto mb-5">
                     Welcome to
                     <em>your</em>
-                    digital learning assistant!
+                    digital assistant!
                 </h2>
                 <a class="btn btn-primary btn-xl" href="#">Coming Soon!</a>
             </div>
@@ -130,7 +128,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Problem Solving</div>
-                                    <p class="mb-0">Unlock your potential with our training program – where challenges become opportunities and solutions are just a click away.</p>
+                                    <p class="mb-0">Unlock your potential - challenges become opportunities and solutions come naturally.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
@@ -140,8 +138,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Computational Thinking</div>
-                                    <p class="mb-0">Embark on a journey of logical discovery with our dynamic computational thinking training program.</p>
+                                    <div class="h2">Art of Communication</div>
+                                    <p class="mb-0">Experience a revolution that builds empathy and increases self awareness.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
@@ -152,7 +150,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Entrepreneurship</div>
-                                    <p class="mb-0">Step into a realm of possibilities with our training program, guiding you towards entrepreneurial excellence and accomplishment.</p>
+                                    <p class="mb-0">Step into a realm of possibilities, guiding you towards excellence and accomplishment.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
@@ -163,7 +161,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Financial Literacy</div>
-                                    <p class="mb-0">Explore financial empowerment to gain essential insights and skills to navigate the intricate landscape of finances.</p>
+                                    <p class="mb-0">Empowerment to gain essential insights and skills to navigate the intricacies.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
