Images Change Links open in new Tab Spelling changes

--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/company/a-bridge-ab/"><i class="icon-social-linkedin"></i></a>
+                        <a class="social-link rounded-circle text-white mr-3" target="_blank" href="https://www.linkedin.com/company/a-bridge-ab/"><i class="icon-social-linkedin"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/abridge.ab/"><i class="icon-social-instagram"></i></a>
+                        <a class="social-link rounded-circle text-white mr-3" target="_blank" href="https://www.instagram.com/abridge.ab/"><i class="icon-social-instagram"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="https://www.facebook.com/profile.php?id=61550598659570"><i class="icon-social-facebook"></i></a>
+                        <a class="social-link rounded-circle text-white" target="_blank" href="https://www.facebook.com/profile.php?id=61550598659570"><i class="icon-social-facebook"></i></a>
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; RHO Technology Solutions LLP 2023</p>
