--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-HYLCSMYVFK"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-HYLCSMYVFK');
+        </script>
     </head>
     <body id="page-top">
         <!-- Flying Butterflies-->
@@ -91,10 +100,7 @@
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-directions""></i></span>
                         <h4><strong>Skill Empowerment</strong></h4>
-                        <p class="text-faded mb-0">
-                            Full-spectrum programs for core competency
-                            <i class="fas fa-heart"></i>
-                        </p>
+                        <p class="text-faded mb-0">Full-spectrum programs for core competency</p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-rocket"></i></span>
