--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
         </footer>
         <!-- Scroll to Top Button-->
-        <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
+        <a class="scroll-to-top rounded" href="#page-top"><i class="icon-arrow-up"></i></a>
         <!-- SVG for text animation -->
         <svg id="filters">
             <defs>
