Added forms to link Enquire and Join Us

--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
         <section class="content-section bg-primary text-white">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">We are learning and growing. Want to engage with us...</h2>
-                <a class="btn btn-xl btn-light me-4" href="#!">Enquire!</a>
-                <a class="btn btn-xl btn-dark" href="#!">Join Us!</a>
+                <a class="btn btn-xl btn-light me-4" target="_blank" href="https://forms.gle/eRhY2Tk4m2hB8SpZ7">Enquire!</a>
+                <a class="btn btn-xl btn-dark" target="_blank" href="https://forms.gle/CEucBKDm6SJ9oT2XA">Join Us!</a>
             </div>
         </section>
         <!-- Map-->
