Addition of sample questions

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     9312341234
                 </div>
                 <ul class="note list-unstyled" class="list-unstyled">
-                    <li><i class="icon-puzzle"></i> Take assessment (<a href="#ex1" rel="modal:open">Sample Here</a>) 
-                        </li>
+                    <li><i class="icon-puzzle"></i> Take assessment (<a href="#ex1" rel="modal:open">Sample Here</a>)
+                    </li>
                     <li><i class="icon-trophy"></i> Leaderboard will be added soon.</li>
                 </ul>
             </div>
@@ -306,7 +306,8 @@
                             <div class="d-flex flex-row align-items-center question-title">
                                 <h3 class="text-danger">Q.</h3>
                                 <h5 class="mt-1 ml-2">
-                                    Ravi, a 15-year-old boy, has been asked to give a speech in front of his class. He is nervous and doesn't know how to prepare. What should he do?</h5>                                    
+                                    Ravi, a 15-year-old boy, has been asked to give a speech in front of his class. He
+                                    is nervous and doesn't know how to prepare. What should he do?</h5>
                             </div>
                             <div class="ans ml-2">
                                 <label class="radio"> <input type="radio" name="1" value="brazil">
@@ -322,7 +323,8 @@
                             </div>
                             <div class="ans ml-2">
                                 <label class="radio"> <input type="radio" name="1" value="Indonesia">
-                                    <span>He should practice the speech in front of a mirror because it builds confidence.
+                                    <span>He should practice the speech in front of a mirror because it builds
+                                        confidence.
                                     </span>
                                 </label>
                             </div>
@@ -346,7 +348,8 @@
                         </div>
                     </div>
                 </div>
-            </div>            <div class="d-flex justify-content-center row">
+            </div>
+            <div class="d-flex justify-content-center row">
                 <div class="col-md-10 col-lg-10">
                     <div class="border">
                         <div class="question bg-white p-3 border-bottom">
@@ -358,163 +361,135 @@
                             <div class="d-flex flex-row align-items-center question-title">
                                 <h3 class="text-danger">Q.</h3>
                                 <h5 class="mt-1 ml-2">
-                                    Ravi, a 15-year-old boy, has been asked to give a speech in front of his class. He is nervous and doesn't know how to prepare. What should he do?</h5>                                    
+                                    An operations officer of a high rise building is constantly flooded with complaints
+                                    by the users of the lift for a long waiting time .How would you solve this problem?
+                                </h5>
                             </div>
                             <div class="ans ml-2">
                                 <label class="radio"> <input type="radio" name="2" value="brazil">
-                                    <span>He should memorize the speech because it is easier to remember.
+                                    <span>Get the technician check the speed of the lift.
                                     </span>
                                 </label>
                             </div>
                             <div class="ans ml-2">
                                 <label class="radio"> <input type="radio" name="2" value="Germany">
-                                    <span>He should read the speech from a paper because it is safer.
+                                    <span>Add more lifts to the building.
                                     </span>
                                 </label>
                             </div>
                             <div class="ans ml-2">
                                 <label class="radio"> <input type="radio" name="2" value="Indonesia">
-                                    <span>He should practice the speech in front of a mirror because it builds confidence.
+                                    <span>Add full length mirrors at the waiting area.
                                     </span>
                                 </label>
                             </div>
                             <div class="ans ml-2">
                                 <label class="radio"> <input type="radio" name="2" value="Russia">
-                                    <span>He should write the speech in fancy language because it sounds impressive.
+                                    <span>Give a lesson of patience to the users.
                                     </span>
                                 </label>
                             </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="2" value="Russia">
-                                    <span>He should make the speech long because it shows effort.
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="2" value="Russia">
-                                    <span>He should make the speech short because it is easier to manage.</span>
-                                </label>
+                            
+                        </div>
+                    </div>
+                    </div2 </div>
+                    <div class="d-flex justify-content-center row">
+                        <div class="col-md-10 col-lg-10">
+                            <div class="border">
+                                <div class="question bg-white p-3 border-bottom">
+                                    <div class="d-flex flex-row justify-content-between align-items-center mcq">
+                                        <h4>Sample Question</h4><span>(3 of 4)</span>
+                                    </div>
+                                </div>
+                                <div class="question bg-white p-3 border-bottom">
+                                    <div class="d-flex flex-row align-items-center question-title">
+                                        <h3 class="text-danger">Q.</h3>
+                                        <h5 class="mt-1 ml-2">
+                                            A company is facing increased competition in their market.What is the most
+                                            strategic response?</h5>
+                                    </div>
+                                    <div class="ans ml-2">
+                                        <label class="radio"> <input type="radio" name="3" value="brazil">
+                                            <span>Lower prices to compete on cost.
+                                            </span>
+                                        </label>
+                                    </div>
+                                    <div class="ans ml-2">
+                                        <label class="radio"> <input type="radio" name="3" value="Germany">
+                                            <span>Focus on product differentiation and innovation.
+                                            </span>
+                                        </label>
+                                    </div>
+                                    <div class="ans ml-2">
+                                        <label class="radio"> <input type="radio" name="3" value="Indonesia">
+                                            <span>Maintain current strategies and wait for market conditions to change.
+                                            </span>
+                                        </label>
+                                    </div>
+                                    
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div2
-            </div>            <div class="d-flex justify-content-center row">
-                <div class="col-md-10 col-lg-10">
-                    <div class="border">
-                        <div class="question bg-white p-3 border-bottom">
-                            <div class="d-flex flex-row justify-content-between align-items-center mcq">
-                                <h4>Sample Question</h4><span>(3 of 4)</span>
-                            </div>
-                        </div>
-                        <div class="question bg-white p-3 border-bottom">
-                            <div class="d-flex flex-row align-items-center question-title">
-                                <h3 class="text-danger">Q.</h3>
-                                <h5 class="mt-1 ml-2">
-                                    Ravi, a 15-year-old boy, has been asked to give a speech in front of his class. He is nervous and doesn't know how to prepare. What should he do?</h5>                                    
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="3" value="brazil">
-                                    <span>He should memorize the speech because it is easier to remember.
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="3" value="Germany">
-                                    <span>He should read the speech from a paper because it is safer.
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="3" value="Indonesia">
-                                    <span>He should practice the speech in front of a mirror because it builds confidence.
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="3" value="Russia">
-                                    <span>He should write the speech in fancy language because it sounds impressive.
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="3" value="Russia">
-                                    <span>He should make the speech long because it shows effort.
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="3" value="Russia">
-                                    <span>He should make the speech short because it is easier to manage.</span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>            <div class="d-flex justify-content-center row">
-                <div class="col-md-10 col-lg-10">
-                    <div class="border">
-                        <div class="question bg-white p-3 border-bottom">
-                            <div class="d-flex flex-row justify-content-between align-items-center mcq">
-                                <h4>Sample Question</h4><span>(4 of 4)</span>
-                            </div>
-                        </div>
-                        <div class="question bg-white p-3 border-bottom">
-                            <div class="d-flex flex-row align-items-center question-title">
-                                <h3 class="text-danger">Q.</h3>
-                                <h5 class="mt-1 ml-2">
-                                    Ravi, a 15-year-old boy, has been asked to give a speech in front of his class. He is nervous and doesn't know how to prepare. What should he do?</h5>                                    
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="4" value="brazil">
-                                    <span>He should memorize the speech because it is easier to remember.
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="4" value="Germany">
-                                    <span>He should read the speech from a paper because it is safer.
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="4" value="Indonesia">
-                                    <span>He should practice the speech in front of a mirror because it builds confidence.
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="4" value="Russia">
-                                    <span>He should write the speech in fancy language because it sounds impressive.
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="4" value="Russia">
-                                    <span>He should make the speech long because it shows effort.
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="ans ml-2">
-                                <label class="radio"> <input type="radio" name="4" value="Russia">
-                                    <span>He should make the speech short because it is easier to manage.</span>
-                                </label>
+                    <div class="d-flex justify-content-center row">
+                        <div class="col-md-10 col-lg-10">
+                            <div class="border">
+                                <div class="question bg-white p-3 border-bottom">
+                                    <div class="d-flex flex-row justify-content-between align-items-center mcq">
+                                        <h4>Sample Question</h4><span>(4 of 4)</span>
+                                    </div>
+                                </div>
+                                <div class="question bg-white p-3 border-bottom">
+                                    <div class="d-flex flex-row align-items-center question-title">
+                                        <h3 class="text-danger">Q.</h3>
+                                        <h5 class="mt-1 ml-2">
+                                            You have to reach your grandmothers house at 9:00 AM for a prayer meet,
+                                            however due to bad traffic you reached at 11:00 AM when everything was over
+                                            and winding up. Your grandmother was really upset with you. How can you
+                                            control this kind of situation from occurring?</h5>
+                                    </div>
+                                    <div class="ans ml-2">
+                                        <label class="radio"> <input type="radio" name="4" value="brazil">
+                                            <span>You should have planned to start earlier than you did.
+                                            </span>
+                                        </label>
+                                    </div>
+                                    <div class="ans ml-2">
+                                        <label class="radio"> <input type="radio" name="4" value="Germany">
+                                            <span>You should have considered a faster mode of transport.
+                                            </span>
+                                        </label>
+                                    </div>
+                                    <div class="ans ml-2">
+                                        <label class="radio"> <input type="radio" name="4" value="Indonesia">
+                                            <span>You should have factored in the problems.
+                                            </span>
+                                        </label>
+                                    </div>
+                                    <div class="ans ml-2">
+                                        <label class="radio"> <input type="radio" name="4" value="Russia">
+                                            <span>You should have taken a different route.
+                                            </span>
+                                        </label>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 
-    <!-- jQuery Modal -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
-    <!-- Three JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-    <!-- Popup JS-->
-    <script src="js/popup.js"></script>
+            <!-- jQuery Modal -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+            <link rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+            <!-- Three JS-->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.min.js"></script>
+            <!-- Core theme JS-->
+            <script src="js/scripts.js"></script>
+            <!-- Popup JS-->
+            <script src="js/popup.js"></script>
 
 </body>
 
