Quick textbox fix

--- a/quiz1.html
+++ b/quiz1.html
@@ -53,9 +53,9 @@
             </div>
             <div class="rep">
                 <form class="form-inline">
-                    <input type="text" tabindex="1" class="form-control mb-2 mr-sm-2 textbox" id="name" name="name"
+                    <input  style="width: 100%; margin-left: 0;" type="text" tabindex="1" class="form-control mb-2 mr-sm-2 textbox" id="name" name="name"
                         placeholder="Your Name">
-                    <input type="text" tabindex="2" class="form-control textbox" id="number" name="number"
+                    <input  style="width: 100%; margin-left: 0;" type="text" tabindex="2" class="form-control textbox" id="number" name="number"
                         placeholder="Your Number">
                 </form>
             </div>
