--- a/quiz1.html
+++ b/quiz1.html
@@ -78,6 +78,7 @@
             <section>
                 <div class="que_text">
                     <!-- Here I've inserted question from JavaScript -->
+                    Loading awesomeness...
                 </div>
                 <div class="option_list">
                     <!-- Here I've inserted options from JavaScript -->
