--- a/events/mordernschoolfest/index.html
+++ b/events/mordernschoolfest/index.html
@@ -56,16 +56,17 @@
             </ul>
         </nav>
         <!-- Header-->
-        <header class="masthead d-flex align-items-center">
+        <header class="masthead d-flex align-items-center"
+            style="background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url('images/modernschool.jpeg') no-repeat center center fixed; background-size: cover; color:aliceblue;   opacity: .85;">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1">Making Life Better</h1>
+                <h1 class="mb-1">CONNECT</h1>
                 <h3 class="mb-5">
-                    <div style="display: inline-block;">One</div>
+                    <div style="display: inline-block;">to know about</div>
                     <div id="container">
                         <span id="text1"></span>
                         <span id="text2"></span>
                     </div>
-                    <div style="display: inline-block;">at a time...</div>
+                    <div style="display: inline-block;">MAKE YOUR LIFE BETTER</div>
                 </h3>
                 <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
             </div>
@@ -208,7 +209,7 @@
         <!-- Map-->
         <div class="map" id="contact">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3505.880425419363!2d77.1679283!3d28.513245100000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1e6db0000001%3A0x58cfeb78ae32f8f8!2sSector-A%2C%20Pocket%20B%20and%20C!5e0!3m2!1sen!2sin!4v1693133082890!5m2!1sen!2sin"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.279983127945!2d77.1575697!3d28.561354099999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1dae3588062f%3A0x4bb74b138a1b76de!2sMODERN%20SCHOOL%20VASANT%20VIHAR!5e0!3m2!1sen!2sin!4v1702716367176!5m2!1sen!2sin"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             <!--
@@ -355,7 +356,7 @@
                                     </span>
                                 </label>
                             </div>
-                            
+
                         </div>
                     </div>
                     </div2 </div>
@@ -392,7 +393,7 @@
                                             </span>
                                         </label>
                                     </div>
-                                    
+
                                 </div>
                             </div>
                         </div>
